Trabajo en lateral

--- a/index.html
+++ b/index.html
@@ -44,43 +44,41 @@
         <div class="descripcion">
             <!--Bienvenida con imagen-->
             <div class="bienvenida">
-            <h1>Bienvenido a PJSK</h1>
-            <img src="imgs/Main-image.jpg" alt="">
+                <h1>Bienvenido a PJSK</h1>
+                <img src="imgs/Main-image.jpg" alt="">
             </div>
 
             <!--Descripción general y tabla de contenido(usando flex)-->
             <!--Texto general-->
-            <div>
+            <div class="resumen">
                 <p>texto de ejemplo</p>
             </div>
             <!--Descripción y datos general(Titulo completo, desarrollador(usando grid))-->
-            <div>
-                <p>Project SEKAI COLORFUL STAGE! feat. Hatsune Miku</p>
-                <img src="" alt="">
-                <div>
-                    <div>Japonés</div>
-                    <div>プロジェクトセカイ カラフルステージ！ feat. 初音ミク</div>
-                    <div>Inglés</div>
-                    <div>Project SEKAI COLORFUL STAGE! feat. Hatsune Miku</div>
-                </div>
-                <p>Información</p>
-                <div>
-                    <div>Desarrollador</div>
-                    <div>SEGA, Craft Egg y Colorful Palette</div>
-                    <div>Plataformas</div>
-                    <div>iOS, Android</div>
-                    <div>Lanzamiento/s</div>
-                    <div>Japan: September 30, 2020
-                        Taiwan: September 30, 2021
-                        Global: December 7, 2021
-                        Korea: May 20, 2022
-                        Southeast Asia: September 25, 2023
-                        Mainland China: March 27, 2025</div>
+            <div class="info">
+                <h3 class="subinfo1">Project SEKAI COLORFUL STAGE! feat. Hatsune Miku</h3>
+                <img class="subinfo2" src="imgs/F7B2iJ2a0AAQl20.jpg" alt="">
+                <div class="subinfo3">Japonés</div>
+                <div class="subinfo4">プロジェクトセカイ カラフルステージ！ feat. 初音ミク</div>
+                <div class="subinfo5">Inglés</div>
+                <div class="subinfo6">Project SEKAI COLORFUL STAGE! feat. Hatsune Miku</div>
+                <h3 class="subinfo7">Información</h3>
+                <div class="subinfo8">Desarrollador</div>
+                <div class="subinfo9">SEGA, Craft Egg y Colorful Palette</div>
+                <div class="subinfo10">Plataformas</div>
+                <div class="subinfo11">iOS, Android</div>
+                <div class="subinfo12">Lanzamiento/s</div>
+                <div class="subinfo13">Japan: September 30, 2020
+                    Taiwan: September 30, 2021
+                    Global: December 7, 2021
+                    Korea: May 20, 2022
+                    Southeast Asia: September 25, 2023
+                    Mainland China: March 27, 2025
                 </div>
             </div>
             <!--Tabla de contenido(Acceso rápido)-->
             <div>
                 <ol>
+                    <li></li>
                     <li></li>
                     <li></li>
                 </ol>
