--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
                 <h1>Bienvenido a PJSK</h1>
                 <img src="imgs/Main-image.jpg" alt="">
             </div>
-
             <!--Descripción general y tabla de contenido(usando flex)-->
             <!--Texto general-->
             <div class="resumen">
-                <p>texto de ejemplo</p>
+                <p>Project SEKAI COLORFUL STAGE! feat. Hatsune Miku (also known as "Project SEKAI"or "Proseka") is 
+                a rhythm game developed as a collaboration between SEGA, Craft Egg, Colorful Palette, and Crypton 
+                Future Media. The game was first released in Japan on September 30, 2020 for iOS and Android devices.</p>
+                <p>In addition to the original Japanese server, there are four localised versions of the game released 
+                internationally. These include the Taiwanese (Traditional Chinese) server, which released on September 
+                30, 2021; the Global (English) server, which released on December 7, 2021; and the Korean server, which 
+                released on May 20, 2022. There is also a Simplified Chinese version of the game set to release in 
+                Mainland China on March 27th, 2025.</p>
             </div>
             <!--Descripción y datos general(Titulo completo, desarrollador(usando grid))-->
             <div class="info">
@@ -67,21 +73,42 @@
                 <div class="subinfo10">Plataformas</div>
                 <div class="subinfo11">iOS, Android</div>
                 <div class="subinfo12">Lanzamiento/s</div>
-                <div class="subinfo13">Japan: September 30, 2020
-                    Taiwan: September 30, 2021
-                    Global: December 7, 2021
-                    Korea: May 20, 2022
-                    Southeast Asia: September 25, 2023
-                    Mainland China: March 27, 2025
+                <div class="subinfo13">
+                    <p>Japan: September 30, 2020</p>
+                    <p>Taiwan: September 30, 2021</p>
+                    <p>Global: December 7, 2021</p>
+                    <p>Korea: May 20, 2022</p>
+                    <p>Southeast Asia: September 25, 2023</p>
+                    <p>Mainland China: March 27, 2025</p>
                 </div>
             </div>
             <!--Tabla de contenido(Acceso rápido)-->
-            <div>
+            <div class="tabla">
                 <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>a</li>
+                    <li>b</li>
+                    <li>c</li>
                 </ol>
+            </div>
+        </div>
+        <!--Lateral con info actual-->
+        <div class="actual">
+            <h3>Current Events & Gacha Reruns</h3>
+            <div>
+                <img src="imgs/banner.jpg" alt="aaa">
+                <h4></h4>
+            </div>
+            <div>
+                <img src="imgs/banner1.jpg" alt="">
+                <h4></h4>
+            </div>
+            <div>
+                <img src="imgs/banner2.jpg" alt="">
+                <h4></h4>
+            </div>
+            <div>
+                <img src="imgs/banner4.jpg" alt="">
+                <h4></h4>
             </div>
         </div>
         <!--Contenido de la página-->
