Pruebas de fondo y maquetacion

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="fondo">
     <header>
         <div class="logo"><img src="imgs/Logo.png" alt=""></div>
         <div class="menu">
-            <div>Grupos
+            <div>
+                <a href="">Grupos</a>
+                <!--
                 <ul>
                     <li><a href="">1</a></li>
                     <li><a href="">2</a></li>
@@ -18,18 +21,20 @@
                     <li><a href="">4</a></li>
                     <li><a href="">5</a></li>
                     <li><a href="">6</a></li>
-                </ul>
+                </ul>-->
             </div>
         </div>
         <div class="menu2">
-            <div>Media
+            <div>
+                <a href="">Media</a>
+                <!--
                 <ul>
                     <li><a href="">Canciones</a></li>
                     <li><a href="">Gachas</a></li>
                     <li><a href="">Eventos</a></li>
                     <li><a href="">Cartas</a></li>
                     <li><a href="">Actores</a></li>
-                </ul>
+                </ul>-->
             </div>
         </div>
         <div class="inicio">
@@ -85,9 +90,43 @@
             <!--Tabla de contenido(Acceso rápido)-->
             <div class="tabla">
                 <ol>
-                    <li>a</li>
-                    <li>b</li>
-                    <li>c</li>
+                    <li>Historia</li>
+                    <ol>
+                        <li>Desarrollo</li>
+                        <li>Lanzamiento inicial</li>
+                        <li>Lanzamiento internacional</li>
+                    </ol>
+                    <li>Lanzamientos</li>
+                    <ol>
+                        <li>Versión Taiwanesa</li>
+                        <li>Servidor Global</li>
+                        <li>Versión Coreana</li>
+                        <li>Versión China</li>
+                    </ol>
+                    <li>Narrativa</li>
+                    <li>Personajes</li>
+                    <ol>
+                        <li>VIRTUAL SINGER</li>
+                        <li>Grupos</li>
+                    </ol>
+                    <li>Sistema</li>
+                    <ol>
+                        <li>Mundo Real y SEKAI</li>
+                        <li>Sistema de juego</li>
+                    </ol>
+                    <li>Trajes</li>
+                    <li>Gameplay</li>
+                    <ol>
+                        <li>Solo Live</li>
+                        <li>Multi Live</li>
+                        <li>Cheerful Live</li>
+                        <li>Rank Match</li>
+                        <li>Live Boosts</li>
+                        <li>Dificultades</li>
+                    </ol>
+                    <li>Virtual Live</li>
+                    <li>Trivia</li>
+                    <li>Links externos</li>
                 </ol>
             </div>
         </div>
@@ -116,6 +155,7 @@
             <h3>titulo1</h3>
             <p>aakflsajfaskf</p>
         </div>
+    </div>
     </div>
 </body>
 </html>
