Maquetacion header y texto

--- a/index.html
+++ b/index.html
@@ -8,44 +8,43 @@
 </head>
 <body>
     <div class="fondo">
-    <header>
-        <div class="logo"><img src="imgs/Logo.png" alt=""></div>
-        <div class="menu">
-            <div>
-                <a href="">Grupos</a>
-                <!--
-                <ul>
-                    <li><a href="">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">4</a></li>
-                    <li><a href="">5</a></li>
-                    <li><a href="">6</a></li>
-                </ul>-->
-            </div>
-        </div>
-        <div class="menu2">
-            <div>
-                <a href="">Media</a>
-                <!--
-                <ul>
-                    <li><a href="">Canciones</a></li>
-                    <li><a href="">Gachas</a></li>
-                    <li><a href="">Eventos</a></li>
-                    <li><a href="">Cartas</a></li>
-                    <li><a href="">Actores</a></li>
-                </ul>-->
-            </div>
-        </div>
-        <div class="inicio">
-            <div><a href="">Inicia sesión</a></div>
-        </div>
-        <div class="registro">
-            <div><a href="">Registrate</a></div>
-        </div>
-    </header>
-
     <div class="principal">
+        <header>
+            <div class="logo"><img src="imgs/Logo.png" alt=""></div>
+            <div class="menu">
+                <div>
+                    <a href="">Grupos</a>
+                    <!--
+                    <ul>
+                        <li><a href="">1</a></li>
+                        <li><a href="">2</a></li>
+                        <li><a href="">3</a></li>
+                        <li><a href="">4</a></li>
+                        <li><a href="">5</a></li>
+                        <li><a href="">6</a></li>
+                    </ul>-->
+                </div>
+            </div>
+            <div class="menu2">
+                <div>
+                    <a href="">Media</a>
+                    <!--
+                    <ul>
+                        <li><a href="">Canciones</a></li>
+                        <li><a href="">Gachas</a></li>
+                        <li><a href="">Eventos</a></li>
+                        <li><a href="">Cartas</a></li>
+                        <li><a href="">Actores</a></li>
+                    </ul>-->
+                </div>
+            </div>
+            <div class="inicio">
+                <div><a href="">Inicia sesión</a></div>
+            </div>
+            <div class="registro">
+                <div><a href="">Registrate</a></div>
+            </div>
+        </header>
         <div class="descripcion">
             <!--Bienvenida con imagen-->
             <div class="bienvenida">
@@ -53,17 +52,6 @@
                 <img src="imgs/Main-image.jpg" alt="">
             </div>
             <!--Descripción general y tabla de contenido(usando flex)-->
-            <!--Texto general-->
-            <div class="resumen">
-                <p>Project SEKAI COLORFUL STAGE! feat. Hatsune Miku (also known as "Project SEKAI"or "Proseka") is 
-                a rhythm game developed as a collaboration between SEGA, Craft Egg, Colorful Palette, and Crypton 
-                Future Media. The game was first released in Japan on September 30, 2020 for iOS and Android devices.</p>
-                <p>In addition to the original Japanese server, there are four localised versions of the game released 
-                internationally. These include the Taiwanese (Traditional Chinese) server, which released on September 
-                30, 2021; the Global (English) server, which released on December 7, 2021; and the Korean server, which 
-                released on May 20, 2022. There is also a Simplified Chinese version of the game set to release in 
-                Mainland China on March 27th, 2025.</p>
-            </div>
             <!--Descripción y datos general(Titulo completo, desarrollador(usando grid))-->
             <div class="info">
                 <h3 class="subinfo1">Project SEKAI COLORFUL STAGE! feat. Hatsune Miku</h3>
@@ -87,47 +75,59 @@
                     <p>Mainland China: March 27, 2025</p>
                 </div>
             </div>
-            <!--Tabla de contenido(Acceso rápido)-->
-            <div class="tabla">
-                <ol>
-                    <li>Historia</li>
+            <div class="resumentabla">
+                <!--Texto general-->
+                <div class="resumen">
+                    <p>Project SEKAI COLORFUL STAGE! feat. Hatsune Miku (also known as "Project SEKAI"or "Proseka") is 
+                    a rhythm game developed as a collaboration between SEGA, Craft Egg, Colorful Palette, and Crypton 
+                    Future Media. The game was first released in Japan on September 30, 2020 for iOS and Android devices.</p>
+                    <p>In addition to the original Japanese server, there are four localised versions of the game released 
+                    internationally. These include the Taiwanese (Traditional Chinese) server, which released on September 
+                    30, 2021; the Global (English) server, which released on December 7, 2021; and the Korean server, which 
+                    released on May 20, 2022. There is also a Simplified Chinese version of the game set to release in 
+                    Mainland China on March 27th, 2025.</p>
+                </div>
+                <!--Tabla de contenido(Acceso rápido)-->
+                <div class="tabla">
                     <ol>
-                        <li>Desarrollo</li>
-                        <li>Lanzamiento inicial</li>
-                        <li>Lanzamiento internacional</li>
+                        <li><a href="">Historia</a></li>
+                        <ol>
+                            <li><a href="">Lanzamiento inicial</a></li>
+                            <li><a href="">Lanzamiento internacional</a></li>
+                        </ol>
+                        <li><a href="">Lanzamientos</a></li>
+                        <ol>
+                            <li><a href="">Versión Taiwanesa</a></li>
+                            <li><a href="">Servidor Global</a></li>
+                            <li><a href="">Versión Coreana</a></li>
+                            <li><a href="">Versión China</a></li>
+                        </ol>
+                        <li><a href="">Narrativa</a></li>
+                        <li><a href="">Personajes</a></li>
+                        <ol>
+                            <li><a href="">VIRTUAL SINGER</a></li>
+                            <li><a href="">Grupo</a>s</li>
+                        </ol>
+                        <li><a href="">Sistema</a></li>
+                        <ol>
+                            <li><a href="">Mundo Real y SEKAI</a></li>
+                            <li><a href="">Sistema de juego</a></li>
+                        </ol>
+                        <li><a href="">Trajes</a></li>
+                        <li><a href="">Gameplay</a></li>
+                        <ol>
+                            <li><a href="">Solo Live</a></li>
+                            <li><a href="">Multi Live</a></li>
+                            <li><a href="">Cheerful Live</a></li>
+                            <li><a href="">Rank Match</a></li>
+                            <li><a href="">Live Boosts</a></li>
+                            <li><a href="">Dificultades</a></li>
+                        </ol>
+                        <li><a href="">Virtual Live</a></li>
+                        <li><a href="">Trivia</a></li>
+                        <li><a href="">Links externos</a></li>
                     </ol>
-                    <li>Lanzamientos</li>
-                    <ol>
-                        <li>Versión Taiwanesa</li>
-                        <li>Servidor Global</li>
-                        <li>Versión Coreana</li>
-                        <li>Versión China</li>
-                    </ol>
-                    <li>Narrativa</li>
-                    <li>Personajes</li>
-                    <ol>
-                        <li>VIRTUAL SINGER</li>
-                        <li>Grupos</li>
-                    </ol>
-                    <li>Sistema</li>
-                    <ol>
-                        <li>Mundo Real y SEKAI</li>
-                        <li>Sistema de juego</li>
-                    </ol>
-                    <li>Trajes</li>
-                    <li>Gameplay</li>
-                    <ol>
-                        <li>Solo Live</li>
-                        <li>Multi Live</li>
-                        <li>Cheerful Live</li>
-                        <li>Rank Match</li>
-                        <li>Live Boosts</li>
-                        <li>Dificultades</li>
-                    </ol>
-                    <li>Virtual Live</li>
-                    <li>Trivia</li>
-                    <li>Links externos</li>
-                </ol>
+                </div>
             </div>
         </div>
         <!--Lateral con info actual-->
@@ -152,8 +152,40 @@
         </div>
         <!--Contenido de la página-->
         <div class="contenido">
-            <h3>titulo1</h3>
-            <p>aakflsajfaskf</p>
+            <h2>History</h2>
+            <hr>
+            <h3>Initial Release</h3>
+            <p>On September 5, 2020, the Project SEKAI Colorful Stage! Rehearsal Edit was released; it showcased the rhythm game itself, along with the Virtual Live room, where players were able to interact with one another. The Rehearsal Edit featured three songs; Hibana -Reloaded-, Sweet Magic, and Tell Your World, each having all five levels of beatmap difficulty. The demo ended on September 11th, 2020, and has not been playable since then. The game was released on September 30, 2020. Pre-registration was originally set to begin in late April but was delayed until further notice due to the COVID-19 pandemic. In the fifth Project SEKAI livestream, it was announced pre-registration will start on July 22. Because various preregistration milestones were reached, there would be rewards for everyone who downloaded the game from then on.</p>
+            <h3>International Release</h3>
+            <p>Prior to the Japanese release of Project SEKAI, a statement for "fans outside of Japan" was made on the game's Twitter account, confirming that there were no plans for a simultaneous worldwide release of the game[2]. However, "overseas versions" of the game were teased, and international fans were told to "stay tuned". These "overseas versions" would later result in the release four different localised versions of Project SEKAI, making the game accessible to international players in Chinese, English and Korean.</p>
+            <h2>Localisation and Worldwide Releases</h2>
+            <hr>
+            <h3>Taiwanese version</h3>
+            <p>世界計畫 繽紛舞台！feat. 初音未來 (Pinyin: Shìjiè Jìhuà Bīnfēn Wǔtái feat. Chūyīn Wèilái, English: SEKAI Project Colorful Stage! feat. Hatsune Miku), is the Taiwanese version of Project SEKAI, published by Nuverse (Hong Kong) Limited[1]. It is often called the "Taiwanese Server" or simply "TW", and is officially referred to as the "Asian Edition"[1]. The Taiwanese server is localised into Traditional Chinese, and is available only in Taiwan, Hong Kong and Macau.</p>
+            <h4>Pre-release</h4>
+            <p>The official site, Facebook, and Instagram accounts were all made available on August 31, 2021. On the same day, a closed beta for the game was made available for a limited number of Android users, which lasted from August 31 until September 6th, 2021.</p>
+            <h4>Release</h4>
+            <p>The full game released on September 30th, 2021[1], exactly 1 year after the Japanese server. On the day of launch, it was available for both iOS and Android[1], and already ran version 1.7 of the game. Subsequent releases of the "Asian Edition" in Mainland China, South Korea, South-East Asia were also planned[1], however these plans seem to have been scrapped.</p>
+            <h3>Global Server</h3>
+            <p>HATSUNE MIKU: COLORFUL STAGE! is the English version of Project SEKAI. It is often called the "English Server" or simply "EN", and is officially referred to as the "Global Server". It initally released in various regions across the Americas, Europe, and Oceania. Later, it would also be released South-East Asia.</p>
+            <h4>Pre-release</h4>
+            <p>The official site, Facebook, Instagram, and Twitter accounts were all made available on August 31, 2021. On September 1, 2021, the English version of Project SEKAI was announced, with plans to launch later that year[1]. SEGA announced that they aimed to manage the game in "approximately 130 countries/regions", beginning with the United States of America and Europe[1]. An open beta test began on October 4, 2021 and ended on October 19 of the same year. The following week, the full release date was confirmed to be December 7, 2021.</p>
+            <h4>Initial Release</h4>
+            <p>The full game first launched on the previously confirmed release date of December 7, 2021, for both iOS and Android devices.</p>
+            <h4>Exclusive Content</h4>
+            <p>Several exclusive songs would be added to the English server, many of which making their way to other server</p>
+            <h4>"Revival my dream" cancellation</h4>
+            <p>On September 23, 2022, it was announced that the "Revival my dream" event would be skipped on the English server, due to the inclusion of "expressions deemed inappropriate in general for the game"[4]. This included it's associated story, gacha, and cards[4]. Though compensation for the event's cancellation were prepared in the form of in-game gifts and additional content[4], this decision proved controversial among players[citation needed]. On September 30, 2022, it would be clarified that the commissioned song associated with the event would still be available, and that there were no plans to cancel any future content from the Japanese server[5].</p>
+            <h4>South-East Asian Release</h4>
+            <p>While South-East Asia was initially planned to receive the Taiwanese "Asian Edition" of the game, official social media accounts announced on September 23, 2023 that South-East Asia would be receiving the global server on September 25, 2023.</p>
+            <h3>Korean Version</h3>
+            <p>Launched under the name "프로젝트 세카이 컬러풀 스테이지! feat.하츠네 미쿠"</p>
+            <h4>Release</h4>
+            <p>On March 8, 2022, pre-registration for the Korean server of the game was released. A beta version was open from April 7 to April 14, 2022. The full version was released on May 20, 2022</p>
+            <h4>Cut/Removed Songs</h4>
+            <p>As with the release of the Project DIVA series, the Korean version would not receive Senbonzakura.</p>
+            <h3>Chinese Version</h3>
+            <p>On September 30, 2024, pre-registration for the Chinese server opened and was available for players in mainland China. A gacha-style event was held to commemorate the occasion, with possible prizes being a Playstation 5, Nintendo Switch, Hatsune Miku merchandise, or Project SEKAI merchandise.[6] From December 6 to December 20, the server was open for beta testing on Android devices.[7] It is expected to release on March 27, 2025.[8]</p>
         </div>
     </div>
     </div>
